<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_altas"
        android:layout_width="171dp"
        android:layout_height="149dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="228dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="83dp"
        android:onClick="abrirActivitiesTablas"
        android:text="@string/btn_modulo_altas"
        android:textFontWeight="20"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_modificar"
        app:layout_constraintEnd_toStartOf="@+id/btn_eliminar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_eliminar"
        android:layout_width="171dp"
        android:layout_height="149dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="228dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="83dp"
        android:onClick="abrirActivitiesTablas"
        android:text="@string/btn_modulo_bajas"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_consultas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_altas"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_modificar"
        android:layout_width="171dp"
        android:layout_height="149dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="351dp"
        android:onClick="abrirActivitiesTablas"
        android:text="@string/btn_modulo_cambios"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_consultas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_altas" />

    <Button
        android:id="@+id/btn_consultas"
        android:layout_width="171dp"
        android:layout_height="149dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="351dp"
        android:onClick="abrirActivitiesTablas"
        android:text="@string/btn_modulo_consultas"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_modificar"
        app:layout_constraintTop_toBottomOf="@+id/btn_eliminar" />

    <Button
        android:id="@+id/btn_cerrar"
        android:layout_width="282dp"
        android:layout_height="60dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="94dp"
        android:onClick="abrirActivitiesTablas"
        android:text="@string/btn_cerras_sesion"
        android:textSize="18sp"
        app:iconSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_modificar" />

</androidx.constraintlayout.widget.ConstraintLayout>