<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/caja_num_control_altas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="113dp"
        android:ems="10"
        android:hint="@string/hint_numeros"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/caja_nombre_altas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="1dp"
        android:ems="10"
        android:hint="@string/hint_letras"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="158dp"
        android:text="@string/txt_num_control"
        app:layout_constraintBottom_toTopOf="@+id/caja_num_control_altas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="145dp"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="50dp"
        android:onClick="agregarRegistro"
        android:text="@string/btn_altas_alumnos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_carrera_altas" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="138dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="141dp"
        android:layout_marginBottom="24dp"
        android:text="@string/agregar"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="89dp"
        android:layout_marginEnd="224dp"
        android:layout_marginBottom="1dp"
        android:text="@string/txt_nombre"
        app:layout_constraintBottom_toTopOf="@+id/caja_nombre_altas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caja_num_control_altas" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="87dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="1dp"
        android:text="@string/txt_primerAp"
        app:layout_constraintBottom_toTopOf="@+id/caja_primer_ap_altas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caja_nombre_altas" />

    <EditText
        android:id="@+id/caja_primer_ap_altas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="117dp"
        android:ems="10"
        android:hint="@string/hint_letras"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginEnd="169dp"
        android:layout_marginBottom="3dp"
        android:text="@string/txt_segundoAp"
        app:layout_constraintBottom_toTopOf="@+id/caja_segundo_ap_altas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caja_primer_ap_altas" />

    <EditText
        android:id="@+id/caja_segundo_ap_altas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="1dp"
        android:ems="10"
        android:hint="@string/hint_letras"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="241dp"
        android:text="@string/txt_edad"
        app:layout_constraintBottom_toTopOf="@+id/caja_edad_altas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caja_segundo_ap_altas" />

    <EditText
        android:id="@+id/caja_edad_altas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/hint_numeros"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="10dp"
        android:text="@string/txt_semestre"
        app:layout_constraintBottom_toTopOf="@+id/spinner_semestre_altas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caja_edad_altas" />

    <Spinner
        android:id="@+id/spinner_semestre_altas"
        android:layout_width="206dp"
        android:layout_height="38dp"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="2dp"
        android:entries="@array/semestres"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="203dp"
        android:layout_marginBottom="2dp"
        android:text="@string/txt_carrera"
        app:layout_constraintBottom_toTopOf="@+id/spinner_carrera_altas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_semestre_altas" />

    <Spinner
        android:id="@+id/spinner_carrera_altas"
        android:layout_width="204dp"
        android:layout_height="35dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="20dp"
        android:entries="@array/carreras"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

</androidx.constraintlayout.widget.ConstraintLayout>