<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityRegistroUsuarios">

    <ImageView
        android:id="@+id/img_usuario"
        android:layout_width="200dp"
        android:layout_height="189dp"
        android:layout_marginStart="145dp"
        android:layout_marginTop="121dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="67dp"
        android:background="@drawable/agregar_usuario"
        app:layout_constraintBottom_toTopOf="@+id/caja_usuario_registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.942"
        tools:srcCompat="@drawable/agregar_usuario" />

    <TextView
        android:id="@+id/txt_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="87dp"
        android:layout_marginTop="286dp"
        android:layout_marginEnd="266dp"
        android:layout_marginBottom="12dp"
        android:text="@string/txt_usuario"
        app:layout_constraintBottom_toTopOf="@+id/caja_usuario_registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/caja_usuario_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="87dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="114dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:hint="@string/hint_ususario"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txt_contraseña"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_usuario" />

    <TextView
        android:id="@+id/txt_contraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="94dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="259dp"
        android:layout_marginBottom="9dp"
        android:text="@string/txt_contraseña"
        app:layout_constraintBottom_toTopOf="@+id/caja_contraseña_registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caja_usuario_registro" />

    <EditText
        android:id="@+id/caja_contraseña_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="210dp"
        android:ems="10"
        android:hint="@string/hint_contraseña"
        android:inputType="textVisiblePassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_contraseña" />


    <Button
        android:id="@+id/btn_acceso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="78dp"
        android:layout_marginEnd="172dp"
        android:layout_marginBottom="79dp"
        android:onClick="agregarRegistro"
        android:text="@string/btn_registrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_registro"
        app:layout_constraintTop_toBottomOf="@+id/caja_contraseña_registro"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>